fixed some layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,6 +212,7 @@ ul.menu li:first-of-type {
     display: inline-block;
     text-decoration: none;
     margin-top: auto;
+    margin: auto auto 0 auto;
 }
 
 .start-flex a h3 {
@@ -343,6 +344,11 @@ ul.menu li:first-of-type {
     margin: 1rem;
 }
 
+.accomodations article{
+    background-color: var(--bg-card);
+    margin-bottom: 1.5rem;
+}
+
 .join-us {
     background-color: var(--lt-blue);
     color: var(--white);
@@ -443,10 +449,6 @@ footer ul {
 
     .explore h2 {
         font-size: 2.5rem;
-    }
-
-    .get-started .red-btn {
-        width: 17.5rem;
     }
 
     .start-flex article {
@@ -595,6 +597,31 @@ footer ul {
         width: 160%;
     }
 
+    .accomodations{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+    }
+
+    .accomodations article{
+        flex: 1 1 calc(33% - 1rem);
+    }
+
+    .accomodations h2{
+        flex: 0 0 100%;
+    }
+
+    .accomo-flex{
+        display: flex;
+        flex-direction: column;
+        height: 800px;
+    }
+
+    .accomo-flex a{
+        margin-top: auto;
+      
+    }
+
     .sign-up-form fieldset:last-of-type div {
         flex: 0 0 content;
     }
@@ -610,4 +637,5 @@ footer ul {
     .sign-up {
         background-image: url(../img/parallax-banner-lg.webp);
     }
+
 }
